# cgen

./: Cargo.toml  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
cgen/: Cargo.toml
cgen-gui/: Cargo.toml
cgen-gui/src/: main.rs
cgen/src/: lib.rs
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/cgen/: Cargo.toml
rust/cgen/src/: certificate.rs  lib.rs  objects.rs
rust/cgen/src/objects/: certified_key.rs  crl_distribution_point.rs  custom_extension.rs  date.rs  distinguished_name.rs  dn_type.rs  extended_key_usage_purpose.rs  key_id_method.rs  key_usage_purpose.rs  rsa_key_size.rs  serial_number.rs  signature_algorithm.rs
rust/rdart/: Cargo.toml
rust/rdart/src/: api.rs  frb_generated.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rdart.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rdart.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
